--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=production nodemon server/server.js",
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development webpack serve & nodemon server/server.js",
-    "test": "jest --verbose",
+    "test": "jest __test__ --verbose",
     "cypress:open": "cypress open"
   },
   "nodemonConfig": {
